--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1,4 +1,3 @@
-@import "variables";
-@import "colors";
-@import "global";
-@import "typography";
+@forward 'global';
+@forward 'util';
+@forward 'layout';
